testing padding on dropdown to fix overflow off page, but merging first

--- a/styles/style-settings.css
+++ b/styles/style-settings.css
@@ -113,3 +113,6 @@ footer {
   text-decoration: underline;
   font-weight: 700;
 }
+option {
+  padding: 0;
+}
